syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";
import "resourceuritmpl.proto";

message ResourceType {
    string resource_type_id = 1;
    string resource_type_name = 2;
    string product_id = 3;
    string monitor_center_host = 4;
    int32 monitor_center_port = 5;
    ResourceUriTmpls resource_uri_tmpl = 6;
    bool enable = 7;
    string desc = 8;
}

message ResourceTypeID {
    string resource_type_id = 1;
}

message ResourceTypeResponse {
    ResourceTypeID resource_type_id = 1;
    ResourceType resource_type = 2;
    Error error = 3; //optional
}

//enum RepeatSendType {
//    Fixed = 0;
//    exponential = 1;
//}

service ResourceTypeHandler {
    // resource type
    rpc CreateResourceType (ResourceType) returns (ResourceTypeResponse) {
    }

    rpc DeleteResourceType (ResourceTypeID) returns (ResourceTypeResponse) {
    }

    rpc UpdateResourceType (ResourceType) returns (ResourceTypeResponse) {
    }

    rpc GetResourceType (ResourceTypeID) returns (ResourceTypeResponse) {
    }
}